# Einsatzcockpit

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: version-bump.yml
alembic/versions/: 0002_multiorg_settings_update.py  0003_missing_columns.py  0004_alarm_dispatch.py  0013_incident_autoclose.py  0020_lagekarte_integration.py  0024_template_matrix.py  0027_fahrtenbuch.py  0028_device_token_vehicle.py  0031_lage_hint_alarm.py  0034_ai_prompt_versions.py  0035_ai_lage_hints.py  0037_major_incident.py  0037_sms_gateway_token.py  0039_lage_einheit.py  0040_sms_gateway_token.py  0041_citizen_report_phone_verified.py  0045_multitenancy_pr2_expand.py  0047_multitenancy_pr2_contract.py  0052_multitenancy_pr5_ai_per_org.py  0059_incident_comm_log.py  0062_gsl_staff.py  0072_lage_einheit_resource_fields.py  0073_lage_einheit_leader.py  0074_gsl_leader_history.py  0076_rename_sichter_to_erkunder.py  0078_external_resources.py  0079_multi_site_dispatch.py  0081_uas_pr1_stammdaten.py  0082_uas_pr3_einsatz.py  0084_uas_pr5_ereignis.py  0085_uas_pr6_karte.py  0089_geraeteverleih_tabellen.py  0092_verleih_ausleihe_notizen.py  0096_verleih_geraetetyp.py  0098_weather_dashboard_token.py  0099_fahrtenbuch.py  0100_fahrtenbuch_modul_aktiv.py  0101_fahrtenbuch_seilwinde_felder.py  0103_weather_alert_tables.py  0104_orgsettings_weather_alert.py  (+69 more)
app/: cli.py  config.py  db.py  log_buffer.py  main.py  seed_data.py
app/core/: dependencies.py  html_utils.py  permissions.py  rate_limit.py  resilience.py  security.py  templating.py  tenant.py  timezones.py
app/data/: LIZENZ.md  bam_gefahrgut.csv  foerder_vorlagen.py
app/middleware/: csrf.py  security_headers.py
app/models/: __init__.py  atemschutz_pruefung.py  dibos.py  fahrtenbuch.py  foerderstrecke.py  gateway.py  hoehen_cache.py  incident.py  lagefuehrung.py  lis.py  login_pin.py  major_incident.py  master.py  media_annotation.py  nachschlagewerk.py  objekt.py  org_backup.py  org_mail.py  sms.py  teams_bot.py  teilnahme.py  uas.py  user.py  verleih.py  wasserstelle.py  weather.py  weather_alert.py
app/routers/: api_import.py  api_v1.py  auth.py  device_api.py  gateway_api.py  public.py  sso.py  teams_bot.py  ui_admin.py  ui_ai_prompts.py  ui_annotation.py  ui_archive.py  ui_atemschutz_pruefung.py  ui_breathing.py  (+38 more)
deploy/: README-Deployment.md  einsatzleiter.service
scripts/: eus_import.py
tests/: conftest.py  test_abfluss_service.py  test_ai_service.py  test_ai_situation.py  test_annotation_pr1.py  test_api.py  test_api_hardening.py  test_api_import.py  test_atemschutz_pruefung_form_str.py  test_backup_service.py  test_board_objektgefahren.py  test_broadcast_slowquery.py  test_csrf_middleware.py  test_device_combined.py  test_device_session_binding.py  test_dibos_admin_routes.py  test_dibos_capture.py  test_dibos_client.py  test_dibos_enrich.py  test_dibos_loop.py  test_dok_volltext.py  test_druck_route.py  test_einsatzinfo_pr11.py  test_error_pages.py  test_eus_import.py  test_fahrtenbuch.py  test_fahrtenbuch_schaden_foto.py  test_foerderstrecke_hoehenprofil.py  test_foerderstrecke_pr1.py  test_foerderstrecke_pr2.py  test_foerderstrecke_pr3.py  test_foerderstrecke_pr4.py  test_foerderstrecke_pr5.py  test_foerderstrecke_pr6.py  test_foerderstrecke_pr7.py  test_foerderstrecke_routing.py  test_foerderstrecke_standort.py  test_gateway_dispatch.py  test_gateway_pr1.py  test_gateway_routes.py  (+109 more)
(+452 files in other folders)
