[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "einsatzcockpit"
version = "3.7.0"
description = "Einsatzcockpit – Multi-Organisations-Plattform für Feuerwehren und BOS"
license = "LGPL-2.1-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.14"
dependencies = [
    # Web framework
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.30",
    "gunicorn>=22",
    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "PyMySQL>=1.1",
    "cryptography>=42",
    # Auth
    "bcrypt>=4",
    "itsdangerous>=2.2",
    "python-jose[cryptography]>=3.3",
    # Config
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    # Templating
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    # PDF
    "weasyprint>=62",
    "xhtml2pdf>=0.2.17",
    # Web Push
    "pywebpush>=2.0",
    # Native Android Push (FCM) – optional aktivierbar via Admin > System-Einstellungen
    "firebase-admin>=6.5",
    # QR Code
    "qrcode[pil]>=7.4",
    # Structured logging
    "structlog>=24",
    # Scheduling (background tasks)
    "apscheduler>=3.10",
    # HTTP client (for internal tasks)
    "httpx>=0.27",
    # SMTP (Passwort-Reset)
    "aiosmtplib>=3.0",
    # Email-Validierung
    "email-validator>=2.1",
    # Rate-Limiting
    "slowapi>=0.1.9",
    # MIME-Validierung für Uploads
    "filetype>=1.2",
    # HEIC-Support (iPhone-Bilder) als Pillow-Plugin
    "pillow-heif>=0.18",
    # PDF-Metadaten (Seitenzahl, optionale Thumb-Quelle)
    "pypdf>=4.0",
    # Objektverwaltung: PDF-Seiten-Rasterung (braucht Poppler: apt install poppler-utils)
    "pdf2image>=1.17",
    # Objektverwaltung: OCR-Fallback fuer Scan-PDFs (braucht Tesseract: apt install tesseract-ocr tesseract-ocr-deu)
    "pytesseract>=0.3.10",
    # Excel-Import (Mannschaftsliste)
    "openpyxl>=3.1",
    # KI-Integration (Anthropic Claude)
    "anthropic>=0.50",
    # Geodienste: Point-in-Polygon (GSL Abschnittszuweisung)
    "shapely>=2.0",
    # Koordinatentransformation (LIS-Fahrzeugpositionen EPSG:31254 -> WGS84)
    "pyproj>=3.6",
    # HTML-Sanitisierung (Quill-Output für Einsatzjournal)
    "nh3>=0.2",
    # Statisches OSM-Kartenbild für die Teams-Alarmkarte (rendert direkt aus OSM-Tiles,
    # kein API-Key nötig)
    "staticmap>=0.5.7",
    # Redis Pub/Sub-Bus für worker-übergreifende WebSocket-Zustellung (nur genutzt,
    # wenn REDIS_URL gesetzt ist; siehe app/services/ws_bus.py)
    "redis>=5",
    # Lagedokument: Yjs-CRDT-Sync-Server (Realtime-Kollaboration, kollaborativer
    # Editor GSL/Stab) – reine Python-Implementierung des Yjs-Protokolls, gleicher
    # Stack wie JupyterLab-RTC, siehe app/services/lagedokument_collab.py
    "pycrdt>=0.14",
    "pycrdt-websocket>=0.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    # In-Memory-Redis für den Live-Nachweis des WS-Bus (tests/test_ws_bus_live.py)
    "fakeredis>=2.20",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
